--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,14 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
-        "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.10.1"
-    },
+    "php": "^8.2",
+    "laravel/framework": "^11.0",
+    "laravel/tinker": "^2.9",
+    "symfony/translation": "^7.0",
+    "symfony/yaml": "^7.0",
+    "symfony/clock": "^7.0"
+    }
+    ,
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
